# templates

./: .gitignore  README.md
advanced_programming_exam/: README.md
advanced_programming_exam/exam_template/: install.sh
advanced_programming_exam/exam_template/apps/: CMakeLists.txt
small_c++/python_project/: README.md
small_c++/python_project/small_template/: CMakeLists.txt
small_c++/python_project/small_template/apps/: main.cpp
small_c++/python_project/small_template/src/: CMakeLists.txt
small_c++_python_project/small_template/: README.md  setup.py
small_c++_python_project/small_template/include/: example.hpp
small_c++_python_project/small_template/src/: example_py.cpp
